--- a/src/style.css
+++ b/src/style.css
@@ -77,7 +77,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 1.2rem 0;
+    padding: 1.2rem 0;
+    margin: 0;
 }
 
 h1 {
@@ -119,6 +120,13 @@ h2 {
 
 .daily-special-description {
     margin-right: 0.5rem;
+}
+
+.call-to-action-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 button {
