--- a/src/home/style.css
+++ b/src/home/style.css
@@ -5,13 +5,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 250px;
     position: relative;
+    width: 250px;
     height: 250px;
 }
 
 .daily-special-img {
-    width: 100%;
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
 }
 
 .daily-special-description-container {
