--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Nunito";
-    src: url(./Nunito/Nunito-Regular.ttf);
+    src: url(./assets/Nunito-Regular.ttf);
 }
 
 html {
